# kip

./: Cargo.toml  LICENSE  README.md  config.example.toml  homedd.service  justfile  kipd.service
crates/homed-agenda/: Cargo.toml
crates/homed-agenda/src/: lib.rs
crates/homed-cli/: Cargo.toml
crates/homed-cli/src/: main.rs
crates/homed-gh/: Cargo.toml
crates/homed-gh/src/: lib.rs
crates/homed-storage/: Cargo.toml
crates/homed-storage/src/: lib.rs  menu.rs
crates/homedd/: Cargo.toml
crates/homedd/src/: config.rs  main.rs  socket.rs
crates/kip/: Cargo.toml
crates/kip-agenda/: Cargo.toml
crates/kip-agenda/src/: main.rs
crates/kip-gh/: Cargo.toml
crates/kip-gh/src/: main.rs
crates/kip-plugin/: Cargo.toml
crates/kip-plugin/src/: lib.rs
crates/kip-storage/: Cargo.toml
crates/kip-storage/src/: lib.rs  model.rs
crates/kip/src/: main.rs
crates/kipd/: Cargo.toml
crates/kipd/src/: config.rs  main.rs  socket.rs
