[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
kip-agenda = { path = "crates/kip-agenda" }
kip-gh = { path = "crates/kip-gh" }
kip-storage = { path = "crates/kip-storage" }
kip-plugin = { path = "crates/kip-plugin" }
octocrab = "0.43.0"
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
redb = "2.4.0"
once_cell = "1.20"
tracing = "0.1.41"
dirs = "6.0.0"
notify-rust = "4"
tracing-subscriber = "0.3.19"
icalendar = "0.15"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
url = "2.4"
colored = "2.0"
config = "0.13"
shellexpand = "3.1.0"
thiserror = "2.0.11"
clap = { version = "4.4.18", features = ["derive"] }
