[package]
name = "kip-agenda"
version = "0.1.0"
edition = "2021"

[dependencies]
kip-storage.workspace = true
dotenv.workspace = true
chrono.workspace = true
tokio.workspace = true
anyhow.workspace = true
url.workspace = true
clap.workspace = true
tracing.workspace = true
minicaldav = { version = "*", features = ["serde"] }
serde_json.workspace = true
ureq = "2.12.1"
