[package]
name = "kipd"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json.workspace = true
kip-storage.workspace = true
kip-plugin.workspace = true
tokio.workspace = true
tracing.workspace = true
notify-rust.workspace = true
tracing-subscriber.workspace = true
dirs.workspace = true
config.workspace = true
serde.workspace = true
shellexpand.workspace = true
